@@ -7,16 +7,20 @@
           = submodule_link(blob, @commit.id, project.repository)
     - else
       = blob_icon blob.mode, blob.name
-      = link_to "#diff-#{i}" do
-        %strong
-          = diff_file.new_path
 
-      - if diff_file.deleted_file
-        deleted
-      - elsif diff_file.renamed_file
-        renamed from
-        %strong
-          = diff_file.old_path
+      = link_to "#diff-#{i}" do
+        - if diff_file.renamed_file
+          - old_path, new_path = mark_inline_diffs(diff_file.old_path, diff_file.new_path)
+          %strong.filename.old
+            = old_path
+          &rarr;
+          %strong.filename.new
+            = new_path
+        - else
+          %strong
+            = diff_file.new_path
+          - if diff_file.deleted_file
+            deleted
 
       - if diff_file.mode_changed?
         %small
